# abn.platform.erp.base.vietnam-compliance

./: .eslintignore  .eslintrc  .git-blame-ignore-revs  .gitignore  .mergify.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .releaserc  .semgrepignore  MANIFEST.in  PLAN.md  README.md  codecov.yml  pyproject.toml  setup.py
.github/helper/: install.sh
.github/workflows/: codeql.yml  docs-required.yml  initiate_release.yml  linters.yml  on_release.yml  semantic-commits.yml  server-tests.yml
.greptile/: config.json
docs/: multi-site-setup.md
docs/goals-packs/vietnam-compliance/: 00-goals-pack-brief.md  01-goals-file.md  02-goals-pack-tracker.md  03-goal-queue.md  04-cross-goal-decisions-and-risks.md  05-cross-goal-evidence-log.md  06-completion-report.md
india_compliance/: __init__.py  boot.py  exceptions.py  hooks.py  install.py  patches.txt  setup_wizard.py
india_compliance/audit_trail/client_scripts/: accounts_settings.js  customize_form.js
india_compliance/audit_trail/overrides/: customize_form.py
india_compliance/desktop_icon/: gst_india.json  income_tax_india.json  india_compliance.json
india_compliance/gst_india/api_classes/: base.py  public.py  taxpayer_base.py  taxpayer_e_invoice.py  taxpayer_returns.py
india_compliance/gst_india/client_scripts/: address.js  company.js  delivery_note.js  e_invoice_actions.js  e_waybill_actions.js  e_waybill_applicability.js  item.js  party.js  (+12 more)
india_compliance/patches/: check_version_compatibility.py
india_compliance/tests/: __init__.py  erpnext_test_utils.py  test_records.json
india_compliance/utils/: __init__.py  change_log_utils.py
india_compliance/workspace_sidebar/: income_tax_india.json
scripts/: setup_bench.sh
vietnam_compliance/: __init__.py  boot.py  hooks.py  install.py  modules.txt  patches.txt  setup_wizard.py  uninstall.py
vietnam_compliance/audit_trail/: setup.py  utils.py
vietnam_compliance/config/: docs.py
vietnam_compliance/patches/: check_version_compatibility.py
vietnam_compliance/tests/: erpnext_test_utils.py
vietnam_compliance/vat_vietnam/: uninstall.py
(+335 files in other folders)
