[project]
name = "vietnam_compliance"
authors = [
    { name = "ABN Platform", email = "hello@abnplatform.com" }
]
description = "Vietnam e-invoice compliance app for ERPNext — hóa đơn điện tử theo Nghị định 123/2020/NĐ-CP và Thông tư 78/2021/TT-BTC"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "titlecase~=2.3",
    "pycryptodome~=3.19.0",
    "lxml>=4.9.0",
    "qrcode>=7.0",
    "pypng~=0.20220715.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=17.0.0-dev,<18.0.0"

[tool.bench.dev-dependencies]
parameterized = "~=0.8.1"
time-machine = "~=3.2.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]

ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
]

typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space" # override: use spaces instead of frappe's tabs
docstring-code-format = true


[project.urls]
Homepage = "https://github.com/stevennt/abn.platform.erp.base.vietnam-compliance"
Repository = "https://github.com/stevennt/abn.platform.erp.base.vietnam-compliance"
"Bug Reports" = "https://github.com/stevennt/abn.platform.erp.base.vietnam-compliance/issues"
